# Data-Sculptor

./: .gitignore  README.md
.github/: main.yml
.github/workflows/: beta.yml  dev.yml
benchmarks/: .gitkeep
deployment/: #.env  .gitignore  beta.env  dev.env  docker-compose.yml  jupyterhub.sqlite  jupyterhub_cookie_secret  marsel.env  requirments.txt  restart.sh  start-jupyterhub.sh  uat.env
deployment/beta/: .gitkeep  docker-compose.yml
deployment/common/: .gitkeep
deployment/dev/: .gitkeep  docker-compose.yml
deployment/uat/: .gitkeep  docker-compose.yml  uat.env
new/: README.md  __init__.py  adviser_integration.py  adviser_llm.py  adviser_provider.py  chat_handler_patch.py  context_handler.py  frontend_extension.js  jupyter_ai_config.py  setup.py
resources/config/: .gitkeep
resources/config/jupyterhub/: .env  .gitignore  custom_dockerspawner.py  custom_spawn_handler.py  jupyter_ai_config.py  jupyterhub.sqlite  jupyterhub_config.py
resources/config/nginx/: default.conf  jh.saddog.cloud.conf
resources/data/: .gitkeep
resources/static_resources/: .gitkeep
src/common/: .gitkeep
src/scripts/: .gitkeep
src/services/ml/shared_ml/: pyproject.toml  qwen.py
src/services/ml/shared_ml/shared_ml/: __init__.py  qwen.py
tests/: .gitkeep
tests/LLM/: README.md  bench_config.json  latency_bench.py
tests/semantic_eval/: README.md  direct_feedback_client.py  evaluate.py  evaluate.sh  evaluation_client.py  llm_schemas.py  metrics_processing.py  prompts.py  requirements.txt  router_client.py  schemas.py  semantic_evaluator.py  settings.py
(+228 files in other folders)
